leptos_macro/tests/compiler_assumptions/06_ambiguous_numeric_method_call.stderr
error[E0689]: can't call method `pass` on ambiguous numeric type `{integer}`
  --> tests/compiler_assumptions/06_ambiguous_numeric_method_call.rs:24:21
   |
24 |     let result = 42.pass();
   |                     ^^^^
   |
help: you must specify a concrete type for this numeric value, like `i32`
   |
24 |     let result = 42_i32.pass();
   |                    ++++
